# Inforratica-Django

./: .env.sample  .pdm-python  README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
inforratica/: admin.py  apps.py  models.py  serializers.py  views.py
inforratica/migrations/: 0001_initial.py  0002_initial.py  0002_remove_computador_imagem_computador_capa.py  0002_rename_hd_computer_hd_ssd_and_more.py  0003_alter_computer_imagem.py  0003_ordemservico_status.py  0003_remove_notebook_imagem_notebook_capa.py  0004_rename_fonte_computer_cliente_and_more.py  0004_rename_usuario_ordemservico_cliente.py  0005_delete_cliente_alter_ordemservico_cliente.py  0005_delete_computer.py  0006_initial.py  0006_rename_cliente_ordemservico_usuario.py  0007_alter_computer_imagem.py  0007_alter_ordemservico_usuario.py  0008_delete_computer.py  0009_initial.py  0010_delete_computer.py  0011_initial.py  0012_remove_computador_cliente_remove_computador_preco_and_more.py  0013_computador_cooler_alter_computador_fonte_and_more.py  0014_cliente.py  0015_alter_cliente_options_computador_cliente_and_more.py  0016_alter_computador_memoria_ram.py  0017_ordemservico.py  0018_alter_ordemservico_valor.py  0019_cliente_senha.py
inforratica/models/: __init__.py  cliente.py  computador.py  notebook.py  ordemservico.py
inforratica/serializers/: __init__.py  cliente.py  computador.py  notebook.py  ordemservico.py
inforratica/views/: __init__.py  cliente.py  computador.py  notebook.py  ordemservico.py
uploader/: views.py
uploader/migrations/: 0001_initial.py
usuario/: models.py  serializers.py  views.py
(+2 files in other folders)
