
[project]
name = "Inforratica-Django"
version = "0.1.0"
description = ""
authors = [
    {name = "Guilherme Tamanini", email = "guilherme.gui.tama@gmail.com"},
]
dependencies = [
    "django>=4.2.6",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.0.0",
    "setuptools>=68.0.0",
    "django-cpf>=0.1.0",
    "djangorestframework-simplejwt>=5.2.2",
    "python-magic>=0.4.27",
    "Pillow>=10.0.1",
    "python-dotenv>=1.0.0",
    "netifaces>=0.11.0",
    "gunicorn>=21.2.0",
    "whitenoise[brotli]>=6.6.0",
    "black>=23.10.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system] 
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
]

[tool.pdm.scripts]
pre_dev = "python ./scripts/set_my_ip.py"
dev = "python manage.py runserver 0.0.0.0:19003"

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"